--- a/Style.css
+++ b/Style.css
@@ -29,7 +29,7 @@ html, body {
 .GameContainer{
     display: flex;
     width: 70vh;
-    height: 70vh;
+    height: 70vw;
     background-color: rgb(255, 255, 255);
     background-image: url(TicToe.png);
     background-size: cover;
