--- a/Style.css
+++ b/Style.css
@@ -95,3 +95,9 @@ html, body {
     background-size: cover;
     z-index: 10;
 }
+
+@media (max-width: 768px) and (orientation: portrait) {
+  .GameContainer {
+    width: 90%;
+  }
+}
