--- a/Style.css
+++ b/Style.css
@@ -96,7 +96,7 @@ html, body {
     z-index: 10;
 }
 
-@media (max-width: 768px) and (orientation: portrait) {
+@media(orientation: portrait) {
   .GameContainer {
     width: 90%;
   }
